demo1/destinationRule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: green-dr
  namespace: demo
spec:
  host: green-svc.demo.svc.cluster.local
  trafficPolicy:

### Security Option ###
    tls:
      mode: ISTIO_MUTUAL

### Connection Pool Settings ###
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s

### LoadBalancing Algorithms ###
    loadBalancer: 
      simple: ROUND_ROBIN
#      simple: LEAST_CONN
#      simple: RANDOM

  subsets:
  - name: green-app
    labels:
      app: green

---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: blue-dr
  namespace: demo
spec:
  host: blue-svc.demo.svc.cluster.local
  trafficPolicy:

### Security Option ###
    tls:
      mode: ISTIO_MUTUAL

### Connection Pool Settings ###
    connectionPool:
      tcp:
        maxConnections: 100
        connectTimeout: 30ms
        tcpKeepalive:
          time: 7200s
          interval: 75s

### LoadBalancing Algorithms ###
    loadBalancer:
      simple: ROUND_ROBIN
#      simple: LEAST_CONN
#      simple: RANDOM

  subsets:
  - name: blue-app
    labels:
      app: blue
