demo1/virtualService-pathBased-Routing.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: pathbased-vs
  namespace: demo
spec:
  hosts:
  - demo1.local.com

  gateways:
  - demo1-gateway

  http:
  - name: green
    match:
    - uri: 
        prefix: /green
    rewrite:
      uri: /
    route:
    - destination: 
        host: green-svc.demo.svc.cluster.local
        subset: green-app


  - name: blue
    match: 
    - uri:
        prefix: /blue
    rewrite:
      uri: /
    route:
    - destination:
        host: blue-svc.demo.svc.cluster.local
        subset: blue-app
